fix: z-index

--- a/coffee-house/css/menu-page-css/menu-slider-style.css
+++ b/coffee-house/css/menu-page-css/menu-slider-style.css
@@ -3,7 +3,7 @@
   position: fixed;
   width: 100%;
   height: 100%;
-  z-index: 3;
+  z-index: 19;
 }
 
 .shadow._active {
